# horizons_app

./: .gitignore  backup.sql  docker-compose.yml  sauvegarde_horizons.sql
horizons_back/: Dockerfile  README.md  requirements.txt
horizons_back/app/: database.py  main.py
horizons_back/app/core/: google_calendar.py  oauth_codes.py  security.py
horizons_back/app/crud/: __init__.py  activity.py  assignment.py  category.py  festival.py  job.py  mail_template.py  preference.py  slot.py  task.py  user.py  volunteer.py  volunteer_links.py
horizons_back/app/models/: __init__.py  activity.py  assignment.py  category.py  festival.py  job.py  mail_template.py  preference.py  slot.py  task.py  user.py  volunteer.py
horizons_back/app/routes/: activity.py  assignments.py  auth.py  categories.py  festival.py  import_jobs.py  import_volunteers.py  jobs.py  mail.py  mail_template.py  preferences.py  tags.py  task.py  user.py  volunteers.py
horizons_back/app/schemas/: __init__.py  activity.py  assignment.py  category.py  festival.py  import_job_report.py  import_volunteer_report.py  job.py  mail.py  mail_template.py  preference.py  slot.py  task.py  user.py  volunteer.py  volunteer_mate.py  volunteer_preference.py  volunteer_slot.py
horizons_back/app/services/: email_service.py  import_job_service.py  import_volunteer_service.py  mail_template_service.py  pipeline_service.py  task_manager.py
horizons_front/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
horizons_front/src/: App.vue  router.d.ts  router.ts  style.css
horizons_front/src/api/: index.ts
horizons_front/src/components/assignments/: AlgorithmProgressModal.vue  AssignmentGantt.vue  AssignmentGanttBlock.vue  AssignmentJobModal.vue  AssignmentJobTooltip.vue  AssignmentSummaryBar.vue  AssignmentView.vue  DragGhostCard.vue  GanttFilters.vue  MetricChip.vue  VolunteerAutocomplete.vue  VolunteerCard.vue  VolunteerSidebar.vue
horizons_front/src/components/auth/: AuthCallbackView.vue  AuthInput.vue  AuthNotification.vue  AuthPage.vue  GoogleAuthButton.vue  (+1 more)
horizons_front/src/composables/: useAuth.ts  useBenevoles.ts  useCloudinary.ts  useDragState.ts  useFestivalDays.ts  useFormValidation.ts  useJob.ts  useMailTemplate.ts  usePreference.ts  useProfile.ts  useRichEditor.ts  useTags.ts  useTasks.ts  useToast.ts  useUsers.ts  useWeather.ts
horizons_front/src/directives/: clickOutside.ts
horizons_front/src/stores/: useAssignmentStore.ts  useFestivalStore.ts  useUserStore.ts
horizons_front/src/templates/: generalSchedule.template.ts  personalSchedule.template.ts  scheduleHelpers.ts  scheduleStyles.ts
horizons_front/src/types/: activity.types.ts  assignment.types.ts  auth.types.ts  benevole.types.ts  benevoleStats.types.ts  festival.types.ts  import.types.ts  navItem.types.ts  planning.types.ts  task.types.ts  user.types.ts
horizons_front/src/utils/: CategoryColor.ts
horizons_timetable/: README.md
horizons_timetable/.github/workflows/: sync-backend.yml  version-core.yml  version-parsing.yml
horizons_timetable/horizons-core/: pyproject.toml
horizons_timetable/horizons-core/src/horizons_core/dataclass/: benevole.py  categorie.py  creneau.py  poste.py
horizons_timetable/horizons-core/src/horizons_core/exceptions/: error_severity.py  invalid_timeslot_exception.py  parse_exception.py  sheet_reader_error.py
horizons_timetable/horizons-core/src/horizons_core/ods/: __init__.py  cell_span_detector.py  column_indexer.py  isheet_reader.py  sheet_navigator.py  sheet_reader.py
horizons_timetable/horizons-core/src/horizons_core/parsing/: parse_result.py
horizons_timetable/horizons-core/src/horizons_core/utils/: date_utils.py  enums.py  mapping_utils.py  text_utils.py
horizons_timetable/horizons-genetic/: pyproject.toml
horizons_timetable/horizons-genetic/src/horizons_genetic/genetic/: engine.py  hill_climber.py
horizons_timetable/horizons-genetic/src/horizons_genetic/genetic/core/: chromosome.py  population.py
horizons_timetable/horizons-genetic/src/horizons_genetic/genetic/fitness/: affectation_scorer.py  fitness_weights.py  incremental_fitness_calculator.py  max_fitness.py
horizons_timetable/horizons-genetic/src/horizons_genetic/genetic/operators/: initializer.py
horizons_timetable/horizons-genetic/src/horizons_genetic/genetic/operators/crossover/: i_crossover.py  volunteer_crossover.py
horizons_timetable/horizons-genetic/src/horizons_genetic/genetic/operators/mutation/: adaptative_mutation.py  i_mutation.py
horizons_timetable/horizons-genetic/src/horizons_genetic/genetic/settings/: config.py
horizons_timetable/horizons-genetic/src/horizons_genetic/genetic/utils/: chromosome_converter.py  daily_hours_checker.py  index_manager.py
horizons_timetable/horizons-genetic/src/horizons_genetic/launch/: config.py  export.py  genetic.py  logging_setup.py  main.py  parsing.py  solution_encoder.py  statistics.py
horizons_timetable/horizons-genetic/src/horizons_genetic/output/: ods_exporter.py
horizons_timetable/parsing-benevole/: pyproject.toml
horizons_timetable/parsing-benevole/src/parsing_benevole/: parseur_benevole.py
horizons_timetable/parsing-benevole/src/parsing_benevole/benevole/: column_helper.py  compagnon_matcher.py  disponibilite_generator.py  preference_extractor.py
horizons_timetable/parsing-benevole/src/parsing_benevole/dataclass/: compagnon_data.py  mate_warning.py
horizons_timetable/parsing-benevole/src/parsing_benevole/interfaces/: interfaces.py
horizons_timetable/parsing-benevole/src/parsing_benevole/settings/: constants.py  schema_configuration.py
horizons_timetable/parsing-poste/: pyproject.toml
horizons_timetable/parsing-poste/src/parsing_poste/: parseur_poste.py
horizons_timetable/parsing-poste/src/parsing_poste/interfaces/: interfaces.py
horizons_timetable/parsing-poste/src/parsing_poste/poste/: categorie_tracker.py  creneau_parseur.py  jour_detector.py  poste_validator.py
horizons_timetable/parsing-poste/src/parsing_poste/settings/: poste_config.py
horizons_timetable/scripts/: bump_version.py  update_requirements.py
(+89 files in other folders)
